--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <title>Vk Templates</title>
-<meta charset="UTF-8">      
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" link href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="/Css/font-awesome.min.css">	
-<link rel="stylesheet" link href="/Vk%20Templates.htm">
-	
+<link rel="stylesheet" href="/Css/font-awesome.min.css">
+<link rel="stylesheet" link href="/index.html">
+
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -17,13 +17,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
-</style>	
-	
+</style>
+
 <body class="w3-black">
 
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-	<!-- Avatar image in top left corner -->	
+	<!-- Avatar image in top left corner -->
 		<img src="/Image/IMG_3155.jpg" alt="" class="image" style="width:100%">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
@@ -72,7 +72,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<br>
 				<i><br>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design, šport ,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.
 			  Toto je moja prvá osobná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)<i/>
-		
+
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
     <div class="w3-white">
@@ -86,7 +86,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-white">
       <div class="w3-light-blue" style="height:28px;width:70%"></div>
     </div><br>
-    
+
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">11+</span><br>
@@ -209,7 +209,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<p>
 					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey" type="submit">
         <i class="fa fa-paper-plane"></i> Pošli odkaz
-        
+
         </button>
 				</p>
 			</form>
@@ -234,3 +234,4 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </body>
 
 </html>
+
