--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" link href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="/Css/font-awesome.min.css">
-<link rel="stylesheet" link href="./index.htm">
+<link rel="stylesheet" link href="/index.htm">
 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
