--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<!-- Avatar image in top left corner -->
-		<img src="/Image/IMG_3155.jpg" alt="" class="image" style="width:100%">
+		<img src="./Image/IMG_3155.jpg" alt="" class="image" style="width:100%">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
@@ -62,7 +62,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello I'm</span> V.Ksenič</h1>
 			<h2>Front End Developer 24hr day and  Photographer.</h2>
-			<img src="/Image/f48bde9a2181a7400582e09f840cd1dd.jpg" alt="intro" class="image" width="564" height="250">
+			<img src="./Image/f48bde9a2181a7400582e09f840cd1dd.jpg" alt="intro" class="image" width="564" height="250">
 		</header>
 
 		<!-- About Section -->
@@ -155,11 +155,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 				<!-- Testimonials -->
 				<h3 class="w3-padding-24  w3-text-light-blue">Referencie</h3>
-				<img src="/Image/b7c27aee54e7a3d3510730a51e6de73e.jpg" alt="Ch. Fox" class="w3-left w3-circle w3-margin-right" style="width:80px">
+				<img src="./Image/b7c27aee54e7a3d3510730a51e6de73e.jpg" alt="Ch. Fox" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Chris Fox.</span> ASP Corporation.</p>
 				<p>”Tento pán a spoločnosť H.M.WebServis sa starajú o našu spoločnosť už celé roky. Dbajú o bezpečnosť našich stránok a navyše aj aby naše stránky fungovali ako hodinky.Thanks“</p>
 				<br>
-				<img src="/Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
+				<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
 				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Dakujeme ešte raz.“</i>
 					<!-- End About Section -->
@@ -174,17 +174,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<!-- Grid for photos -->
 			<div class="w3-row-padding" style="margin:0 -16px">
 				<div class="w3-half">
-					<img src="/Image/nature-3151869_1920.jpg" style="width:100%">
-					<img src="/Image/photo-1461722936851-13a79b294a5d.jpeg" style="width:100%">
-					<img src="/Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" style="width:100%">
-					<img src="/Image/IMG_3080.JPG" alt="intro" class="image" width="100%" height="125">
+					<img src="./Image/nature-3151869_1920.jpg" style="width:100%">
+					<img src="./Image/photo-1461722936851-13a79b294a5d.jpeg" style="width:100%">
+					<img src="./Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" style="width:100%">
+					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100%" height="125">
 				</div>
 
 				<div class="w3-half">
-					<img src="/Image/374gti.jpg" style="width:100%">
-					<img src="/Image/x17-detail-050.jpg" style="width:100%">
-					<img src="/Image/x17-015.jpg" style="width:100%">
-					<img src="/Image/x17-int-002.jpg" style="width:100%">
+					<img src="./Image/374gti.jpg" style="width:100%">
+					<img src="./Image/x17-detail-050.jpg" style="width:100%">
+					<img src="./Image/x17-015.jpg" style="width:100%">
+					<img src="./Image/x17-int-002.jpg" style="width:100%">
 				</div>
 				<!-- End photo grid -->
 			</div>
