--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" link href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" link href="C:./Vladimir-ksenic_files/new/index.html">
 
 
 <style>
@@ -156,11 +155,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<h3 class="w3-padding-24  w3-text-light-blue">Referencie</h3>
 				<img src="./Image/b7c27aee54e7a3d3510730a51e6de73e.jpg" alt="Ch. Fox" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Chris Fox.</span> ASP Corporation.</p>
-				<p>”Tento pán a spoločnosť H.M.WebServis sa starajú o našu spoločnosť už celé roky. Dbajú o bezpečnosť našich stránok a navyše aj aby naše stránky fungovali ako hodinky.Thanks“</p>
+				<p>”Tento pán a jeho spoločnosť WebServis sa starajú o naše stránky už celé roky. Dbajú o ich bezpečnosť a navyše aj aby naše stránky fungovali ako hodinky.Ďakujeme“</p>
 				<br>
 				<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
-				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Dakujeme ešte raz.“</i>
+				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</i>
 					<!-- End About Section -->
 
 		</div>
@@ -197,10 +196,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 			<div class="w3-section">
 				<p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Košice, Svk</p>
-				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
+				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +4216711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<p>Napište niečo a odošlite odkaz:</p>
+			<p>Napíšte otázku a odošlite odkaz:</p>
 
 			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
