--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" link href="/Css/W3css.css">
+<link rel="stylesheet" href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#O mne" class="w3-bar-item w3-button" style="width:25% !important">O mne</a>
+			<a href="#Omne" class="w3-bar-item w3-button" style="width:25% !important">O mne</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -59,19 +59,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello I'm</span> V.Ksenič</h1>
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello!I'm</span>V.Ksenič</h1>
 			<h2>Front End Developer 24hr day and  Photographer.</h2>
 			<img src="./Image/f48bde9a2181a7400582e09f840cd1dd.jpg" alt="intro" class="image" width="564" height="250">
 		</header>
 
 		<!-- About Section -->
-		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="O mne">
+		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
 			<h2 class="w3-text-light-blue"><i>V.  Ksenič </i></h2>
 			<hr style="width:200px" class="w3-opacity">
 			<p><b>Ahojte,ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-				<i><br>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)<i/>
+				<i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)<i/>
 
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
