--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello!I'm</span>V.Ksenič</h1>
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello! I'm</span> V.Ksenič</h1>
 			<h2>Front End Developer 24hr day and  Photographer.</h2>
 			<img src="./Image/f48bde9a2181a7400582e09f840cd1dd.jpg" alt="intro" class="image" width="564" height="250">
 		</header>
 
 		<!-- About Section -->
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
-			<h2 class="w3-text-light-blue"><i>V.  Ksenič </i></h2>
+			<h2 class="w3-text-light-blue"><i>O mne</i></h2>
 			<hr style="width:200px" class="w3-opacity">
-			<p><b>Ahojte,ľudia!</b><br>
+			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
 				<i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)<i/>
