--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)<i/>
+			    <i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)</i>
 
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
