--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 		<!-- About Section -->
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
-			<h2 class="w3-text-light-blue"><i>O mne</i></h2>
+			<h2 class="w3-text-light-blue">O mne</h2>
 			<hr style="width:200px" class="w3-opacity">
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
