--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sk">
 <title>index</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -159,7 +159,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<br>
 				<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
-				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</i>
+				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</p>
 					<!-- End About Section -->
 
 		</div>
