--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<!-- Grid for photos -->
 			<div class="w3-row-padding" style="margin:0 -16px">
 				<div class="w3-half">
-					<img src="./Image/nature-3151869_1920.jpg" style="width:100%">
-					<img src="./Image/photo-1461722936851-13a79b294a5d.jpeg" style="width:100%">
-					<img src="./Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" style="width:100%">
-					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100%" height="125">
+					<img src="./Image/nature-3151869_1920.jpg" alt="" style="width:100%">
+					<img src="./Image/photo-1461722936851-13a79b294a5d.jpeg" alt="" style="width:100%">
+					<img src="./Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" alt="" style="width:100%">
+					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100" height="125">
 				</div>
 
 				<div class="w3-half">
-					<img src="./Image/374gti.jpg" style="width:100%">
-					<img src="./Image/x17-detail-050.jpg" style="width:100%">
-					<img src="./Image/x17-015.jpg" style="width:100%">
-					<img src="./Image/x17-int-002.jpg" style="width:100%">
+					<img src="./Image/374gti.jpg" alt=""  style="width:100%">
+					<img src="./Image/x17-detail-050.jpg" alt=""  style="width:100%">
+					<img src="./Image/x17-015.jpg" alt=""  style="width:100%">
+					<img src="./Image/x17-int-002.jpg" alt="" style="width:100%">
 				</div>
 				<!-- End photo grid -->
 			</div>
