--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 					<img src="./Image/nature-3151869_1920.jpg" alt="" style="width:100%">
 					<img src="./Image/photo-1461722936851-13a79b294a5d.jpeg" alt="" style="width:100%">
 					<img src="./Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" alt="" style="width:100%">
-					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100" height="125">
+					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100%" height="120%">
 				</div>
 
 				<div class="w3-half">
