--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 					<img src="./Image/nature-3151869_1920.jpg" alt="" style="width:100%">
 					<img src="./Image/photo-1461722936851-13a79b294a5d.jpeg" alt="" style="width:100%">
 					<img src="./Image/photo-1461722936851-13a79b294a5d%20(3).jpeg" alt="" style="width:100%">
-					<img src="./Image/IMG_3080.JPG" alt="intro" class="image" width="100%" height="120">
+					<img src="./Image/IMG_3080.JPG" alt="intro" class="w3-rounded-right"  width="100%" height="120">
 				</div>
 
 				<div class="w3-half">
@@ -196,7 +196,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 			<div class="w3-section">
 				<p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Košice, Svk</p>
-				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +4216711924</p>
+				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +421556711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
 			<p>Napíšte otázku a odošlite odkaz:</p>
@@ -224,7 +224,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-green">W3Schools.Click here.</a> <a href="https://www.itvkurze.sk/?" target="_blank" class="w3-hover-text-green">ITvKurze tu sa naučite kódiť s profesionálnymi lektormi! Nové kurzy práve začínajú!</a>
+			<p class="w3-medium">Powered by <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-red">W3Schools.Click here.</a> <a href="https://www.itvkurze.sk/?" target="_blank" class="w3-hover-text-green">ITvKurze tu sa naučite kódiť s profesionálnymi lektormi! Nové kurzy práve začínajú!</a>
 				<!-- End footer -->
 		</footer>
 
