--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello! I'm</span> V.Ksenič</h1>
 			<h2>Front End Developer 24hr day and  Photographer.</h2>
-			<img src="./Image/f48bde9a2181a7400582e09f840cd1dd.jpg" alt="intro" class="image" width="564" height="250">
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="image" width="564" height="250">
 		</header>
 
 		<!-- About Section -->
@@ -71,7 +71,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport,milujem svoju rodinu, fotografovanie prírody,kultúrnych podujatí,áut a pod.Stále na sebe makám a robím,čo je v mojich silách.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu môjho súkromia už neprezradím. Dúfam,že je to pochopiteľné:)</i>
+			    <i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport..Milujem svoju rodinu, fotografovanie a turistiku.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu svojho súkromia už neprezradím. Dúfam,že je to pochopiteľné. Prajem Vám priatelia Pekný deň:)</i>
 
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
