--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="/Css/W3css.css">
+<link rel="stylesheet" href="/Css/w31.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello! I'm</span> V.Ksenič</h1>
 			<h2>Front End Developer 24hr day and  Photographer.</h2>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="image" width="564" height="250">
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="image" width="700" height="250">
 		</header>
 
 		<!-- About Section -->
