--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="sk">
-<title>index</title>
+<title>webservis</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +17,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 #main {margin-left: 120px}
 
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
+@media only screen and (max-width: 1200px) {#main {margin-left: 0}}
 </style>
 
 <body class="w3-black">
@@ -59,9 +59,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello! I'm</span> V.Ksenič</h1>
-			<h2>Front End Developer 24hr day and  Photographer.</h2>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="image" width="700" height="250">
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span>
+			<h2 span class="w3-hide-small w3-hover-blue">"Front End Developer &amp; Photographer"</h2>
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-middle" style="width:93%" width="700" height="350">
 		</header>
 
 		<!-- About Section -->
@@ -71,20 +71,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <i>Volám sa Vladimír, bývam v Košiciach,mám rád hudbu,web design,šport..Milujem svoju rodinu, fotografovanie a turistiku.Toto je moja prvá prezenčná webstránka a viac vám o sebe z dôvodu svojho súkromia už neprezradím. Dúfam,že je to pochopiteľné. Prajem Vám priatelia Pekný deň:)</i>
+			    <i>Volám sa Vladimír Ksenič, bývam v Košiciach.Toto je moja prvá prezenčná webstránka ,velké dík za vašu návštevu.Viac informácii na tejto stránke bude postupne a neskôr aktualizovaných. Vopred ďakujem za pochopenie.<br>Prajem Vám priatelia Pekný deň:) Have a nice day:)</i>
 
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:95%"></div>
+      <div class="w3-light-blue" style="height:28px;width:85%"></div>
     </div>
     <p class="w3-wide">Web Design</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:75%"></div>
+      <div class="w3-light-blue" style="height:28px;width:80%"></div>
     </div>
     <p class="w3-wide">Photoshop</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:70%"></div>
+      <div class="w3-light-blue" style="height:28px;width:75%"></div>
     </div><br>
 
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
