--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>webservis</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"-->
-<link rel="stylesheet" href="/Css/w31.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="/Css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -17,7 +17,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 #main {margin-left: 120px}
 
-@media only screen and (max-width: 1200px) {#main {margin-left: 0}}
+@media only screen and (max-width: 800px) {#main {margin-left: 0}}
 </style>
 
 <body class="w3-black">
@@ -25,7 +25,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="image" style="width:100%">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
