--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span>
-			<h2 span class="w3-hide-small w3-hover-blue">"Front End Developer &amp; Photographer"</h2>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-middle" style="width:93%" width="700" height="350">
+				<h2 span class="w3-hide-small w3-hover-blue">"Front End Developer &amp; Photographer"</h2></h1>
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-middle" style="width:85%" width="700" height="350">
 		</header>
 
 		<!-- About Section -->
