--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 #main {margin-left: 120px}
 
-@media only screen and (max-width: 800px) {#main {margin-left: 0}}
+@media only screen and (max-width: 700px) {#main {margin-left: 0}}
 </style>
 
 <body class="w3-black">
@@ -59,9 +59,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span>
-				<h2 span class="w3-hide-small w3-hover-blue">"Front End Developer &amp; Photographer"</h2></h1>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-middle" style="width:85%" width="700" height="350">
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span></h1>
+				<h2 span class="w3-hover-blue">"Front End Developer &amp; Photographer"</h2>
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="700" height="350">
 		</header>
 
 		<!-- About Section -->
