--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" width="" height="">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" width="" height="120">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
@@ -60,8 +60,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span></h1>
-				<h1 span class="w3-hover-blue">"Front End Developer &amp; Photographer"</h1>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="700" height="350">
+				<h2> <span class="w3-hover-blue">"Front End Developer &amp; Photographer"</span></h2>
+			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="700" height="300">
 		</header>
 
 		<!-- About Section -->
