--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" width="" height="120">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%"  height="120">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
