--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span></h1>
 				<h2> <span class="w3-hover-blue">"Front End Developer &amp; Photographer"</span></h2>
-			<img src="./Image/78ce04b2b0a46fe8cce6fe82edcca044.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="700" height="300">
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
 		</header>
 
 		<!-- About Section -->
@@ -224,7 +224,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-red">W3Schools.Click here.</a> <a href="https://www.itvkurze.sk/?" target="_blank" class="w3-hover-text-green">ITvKurze tu sa naučite kódiť s profesionálnymi lektormi! Nové kurzy práve začínajú!</a>
+			<p class="w3-medium">Powered by <a href="https://ladow1.github.io/www/#kontakt" target="_blank" class="w3-hover-text-green">Robíme webové poradenstvo s láskou,nakopneme váš web k lepším výsledkom</a><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">W3Schools.Učte sa základy tvorenia webov.</a>
 				<!-- End footer -->
 		</footer>
 
