--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span></h1>
-				<h2> <span class="w3-hover-blue">"Front End Developer &amp; Photographer"</span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
+				<h2> <span class="w3-hover-blue">"Front End Developer&amp;Webservis"</span></h2>
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:95%" width="560" height="280">
 		</header>
 
 		<!-- About Section -->
@@ -71,7 +71,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <i>Volám sa Vladimír Ksenič, bývam v Košiciach.Toto je moja prvá prezenčná webstránka ,velké dík za vašu návštevu.Viac informácii na tejto stránke bude postupne a neskôr aktualizovaných. Vopred ďakujem za pochopenie.<br>Prajem Vám priatelia Pekný deň:) Have a nice day:)</i>
+			    <i>Webservis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácii aktualizovaných. Vaše otázky píšte na kontakt,kde sa budem snažiť nane čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky.Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </i>
 
     <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
     <p class="w3-wide">Photography</p>
@@ -224,7 +224,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by <a href="https://ladow1.github.io/www/#kontakt" target="_blank" class="w3-hover-text-green">Robíme webové poradenstvo s láskou,nakopneme váš web k lepším výsledkom</a><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">W3Schools.Učte sa základy tvorenia webov.</a>
+			<p class="w3-medium">Powered by V.K.&amp;Webservis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Robíme webové poradenstvo s láskou,nakopneme váš web k lepším výsledkom</a><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">W3Schools.Učte sa základy tvorenia webov.</a>
 				<!-- End footer -->
 		</footer>
 
