--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
   </a>
-		<a href="#Omne" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
+		<a href="#Onás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>O mne</p>
   </a>
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Omne" class="w3-bar-item w3-button" style="width:25% !important">O mne</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">O nás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -59,66 +59,66 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hello People! I'm V.Ksenič</span></h1>
-				<h2> <span class="w3-hover-blue">"Front End Developer&amp;Webservis"</span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:95%" width="560" height="280">
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hi people! This is a site of WebServis© </span></h1>
+			<h3> <span class="w3-hover-blue"><i>Robíme webové poradenstvo s láskou!</i></span></h3>
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:95%" width="564" height="280">
 		</header>
 
 		<!-- About Section -->
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
-			<h2 class="w3-text-light-blue">O mne</h2>
+			<h2 class="w3-text-light-blue">O nás</h2>
 			<hr style="width:200px" class="w3-opacity">
 			    <b>Ahojte, ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <i>Webservis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácii aktualizovaných. Vaše otázky píšte na kontakt,kde sa budem snažiť nane čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky.Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </i>
+			    <b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
 
-    <h3 class="w3-padding-16 w3-text-light-blue">My Skills</h3>
-    <p class="w3-wide">Photography</p>
+    <h3 class="w3-padding-16 w3-text-light-blue">Naše zručnosti</h3>
+    <p class="w3-wide">Fotografovanie</p>
     <div class="w3-white">
       <div class="w3-light-blue" style="height:28px;width:85%"></div>
     </div>
-    <p class="w3-wide">Web Design</p>
+    <p class="w3-wide">Web Dizajn</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:80%"></div>
+      <div class="w3-light-blue" style="height:28px;width:95%"></div>
     </div>
-    <p class="w3-wide">Photoshop</p>
+    <p class="w3-wide">Web Technológie a nástroje</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:75%"></div>
+      <div class="w3-light-blue" style="height:28px;width:85%"></div>
     </div><br>
 
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">11+</span><br>
-        Partners
+        Partneri
       </div>
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">55+</span><br>
-        Projects Done
+        Projekty
       </div>
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">89+</span><br>
-        Happy Clients
+        Veselí klienti
       </div>
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">150+</span><br>
-        Meetings
+        Stretnutia
       </div>
     </div>
 
     <button class="w3-button w3-hover-blue w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
+      <i class="fa fa-download"></i> Download
 				</button>
 
 				<!-- Grid for pricing tables -->
-				<h3 class="w3-padding-16 w3-text-light-blue">Môj Cenník</h3>
+				<h3 class="w3-padding-16 w3-text-light-blue">Náš cenník</h3>
 				<div class="w3-row-padding" style="margin:0 -16px">
 					<div class="w3-half w3-margin-bottom">
 						<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
 							<li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-							<li class="w3-padding-16">Web Design a návrh</li>
-							<li class="w3-padding-16">Mail Support</li>
-							<li class="w3-padding-16">5GB Storage</li>
+							<li class="w3-padding-16">Web dizajn a návrh</li>
+							<li class="w3-padding-16">Mail podpora</li>
+							<li class="w3-padding-16">5GB úložisko</li>
 							<li class="w3-padding-16">Bezpečný hosting</li>
 							<li class="w3-padding-16">Registrácia domény</li>
 							<li class="w3-padding-16">
@@ -126,7 +126,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 								<span class="w3-opacity">na mesiac</span>
 							</li>
 							<li class="w3-light-grey w3-padding-24">
-								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Sign Up</button>
+								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
 							</li>
 						</ul>
 					</div>
@@ -134,17 +134,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 					<div class="w3-half">
 						<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
 							<li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
-							<li class="w3-padding-16">Web Design a tvorba</li>
-							<li class="w3-padding-16">Photography a Mail support</li>
+							<li class="w3-padding-16">Web dizajn a tvorba</li>
+							<li class="w3-padding-16">Photo a Mail podpora</li>
 							<li class="w3-padding-16">Tvorba eshopov</li>
-							<li class="w3-padding-16">30GB Storage</li>
+							<li class="w3-padding-16">30GB úložisko</li>
 							<li class="w3-padding-16">Registrácia domény</li>
 							<li class="w3-padding-16">
 								<h2>25€</h2>
 								<span class="w3-opacity">na mesiac</span>
 							</li>
 							<li class="w3-light-grey w3-padding-24">
-								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Sign Up</button>
+								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
 							</li>
 						</ul>
 					</div>
@@ -166,7 +166,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 		<!-- Portfolio Section -->
 		<div class="w3-padding-64 w3-content" id="Fotky">
-			<h2 class="w3-text-light-blue">Moje Fotky </h2>
+			<h2 class="w3-text-light-blue">Fotky </h2>
 			<hr style="width:200px" class="w3-opacity">
 
 			<!-- Grid for photos -->
@@ -224,7 +224,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by V.K.&amp;Webservis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Robíme webové poradenstvo s láskou,nakopneme váš web k lepším výsledkom</a><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">W3Schools.Učte sa základy tvorenia webov.</a>
+			<p class="w3-medium">Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a><br><a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a>
 				<!-- End footer -->
 		</footer>
 
