--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="sk">
-<title>webservis</title>
+<title>Webservis©</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -59,9 +59,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hi people! This is a site of WebServis© </span></h1>
-			<h3> <span class="w3-hover-blue"><i>Robíme webové poradenstvo s láskou!</i></span></h3>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:95%" width="564" height="280">
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Hi!This is a site of WebServis©</span></h1>
+			<h2> <span class="w3-hover-blue"><i>Robíme webové poradenstvo s láskou!</i></span></h2>
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
 		</header>
 
 		<!-- About Section -->
@@ -135,7 +135,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 						<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
 							<li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
 							<li class="w3-padding-16">Web dizajn a tvorba</li>
-							<li class="w3-padding-16">Photo a Mail podpora</li>
+							<li class="w3-padding-16">Fotky a Mail podpora</li>
 							<li class="w3-padding-16">Tvorba eshopov</li>
 							<li class="w3-padding-16">30GB úložisko</li>
 							<li class="w3-padding-16">Registrácia domény</li>
@@ -218,7 +218,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 		<!-- Footer -->
 		<footer class="w3-content w3-padding-64  w3-text-light-blue w3-xlarge">
-			<i class="fa fa-facebook-official w3-hover-opacity"></i>
+			<i class="fa fa-facebook-official w3-hover-opacity"><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a></i>
 			<i class="fa fa-instagram w3-hover-opacity"></i>
 			<i class="fa fa-snapchat w3-hover-opacity"></i>
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
