--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </a>
 		<a href="#Onás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-user w3-xxlarge"></i>
-    <p>O mne</p>
+    <p>O nás</p>
   </a>
 		<a href="#Fotky" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-eye w3-xxlarge"></i>
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">O nás</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -59,7 +59,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
-			<h1 class="w3-jumbo"><span class="w3-hide-small">Hi!This is a site of WebServis©</span></h1>
+			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte! Toto je stránka WebServis©</span></h1>
 			<h2> <span class="w3-hover-blue"><i>Robíme webové poradenstvo s láskou!</i></span></h2>
 			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
 		</header>
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<hr style="width:200px" class="w3-opacity">
-			    <b>Ahojte, ľudia!</b><br>
+			    <b>Ahojte ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
 			    <b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
@@ -201,7 +201,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			</div><br>
 			<p>Napíšte otázku a odošlite odkaz:</p>
 
-			<form action="/action_page.php" target="_blank">
+			<form action="/action_page.php" target="_blank"><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
@@ -218,7 +218,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 		<!-- Footer -->
 		<footer class="w3-content w3-padding-64  w3-text-light-blue w3-xlarge">
-			<i class="fa fa-facebook-official w3-hover-opacity"><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a></i>
+			<i class="fa fa-facebook-official w3-hover-opacity"></i>
 			<i class="fa fa-instagram w3-hover-opacity"></i>
 			<i class="fa fa-snapchat w3-hover-opacity"></i>
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
