--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
   </a>
-		<a href="#Onás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
+		<a href="#O nás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>O nás</p>
   </a>
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
+			<a href="#O nás" class="w3-bar-item w3-button" style="width:25% !important">O nás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -60,7 +60,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte! Toto je stránka WebServis©</span></h1>
-			<h2> <span class="w3-hover-blue"><i>Robíme webové poradenstvo s láskou!</i></span></h2>
+			<h2> <span class="w3-hover-blue"><i>"Robíme webové poradenstvo s láskou!"</i></span></h2>
 			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="564" height="300">
 		</header>
 
@@ -199,9 +199,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +421556711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<p>Napíšte otázku a odošlite odkaz:</p>
+			<p>Napíšte otázku a odošlite odkaz:</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
 
-			<form action="/action_page.php" target="_blank"><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
+			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
