--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Domov</p>
   </a>
-		<a href="#Onas" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
+		<a href="#Onás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>O nás</p>
   </a>
@@ -48,7 +48,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
 			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onas" class="w3-bar-item w3-button" style="width:25% !important">O nás</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
 			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
 			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
@@ -61,11 +61,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte! Toto je stránka WebServis©</span></h1>
 			<h2> <span class="w3-hover-blue"><b>Robíme webové poradenstvo s láskou!</b></span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:85%" width="500" height="300">
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle w3-margin-right" style="width:90%" width="450" height="250">
 		</header>
 
 		<!-- About Section -->
-		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Omne">
+		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Onás">
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<hr style="width:200px" class="w3-opacity">
 			    <b>Ahojte ľudia!</b><br>
