--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+	body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 
 .w3-sidebar {width: 120px;background: #222;}
@@ -24,90 +24,90 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-	<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%"  height="115">
+		<!-- Avatar image in top left corner -->
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" height="115">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
-    <i class="fa fa-home w3-xxlarge"></i>
-    <p>Domov</p>
-  </a>
+			<i class="fa fa-home w3-xxlarge"></i>
+			<p>Domov</p>
+		</a>
 		<a href="#Onás" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
-    <i class="fa fa-user w3-xxlarge"></i>
-    <p>O nás</p>
-  </a>
+			<i class="fa fa-user w3-xxlarge"></i>
+			<p>O nás</p>
+		</a>
 		<a href="#Fotky" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
-    <i class="fa fa-eye w3-xxlarge"></i>
-    <p>Fotky</p>
-  </a>
+			<i class="fa fa-eye w3-xxlarge"></i>
+			<p>Fotky</p>
+		</a>
 		<a href="#Kontakt" class="w3-bar-item w3-button w3-padding-large  w3-text-light-blue">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>Kontakt</p>
-  </a>
+			<i class="fa fa-envelope w3-xxlarge"></i>
+			<p>Kontakt</p>
+		</a>
 	</nav>
 
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-xlarge ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
+		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:35% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:35% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:35% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:35% !important">Kontakt</a>
 		</div>
 	</div>
 
 
-    <!-- Page Content -->
+	<!-- Page Content -->
 	<div class="w3-padding-large" id="main">
 		<!-- Header/Home -->
 		<header class="w3-container w3-padding-32 w3-center w3-text-light-blue w3-hover-white" id="Domov">
 			<h1 class="w3-jumbo"><span class="w3-hide-small">Vitajte na stránke WebServis©!</span></h1>
 			<h2> <span class="w3-hover-blue"><b>My robíme webové poradenstvo s láskou!</b></span></h2>
-			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle-right w3-margin-right" style="width:80%" width="475" height="250">
+			<img src="./Image/good%20life.jpg" alt="intro" class="w3-middle-right w3-margin-right" style="width:80%" width="375" height="250">
 		</header>
 
 		<!-- About Section -->
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Onás">
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<h style="width:200px" class="w3-opacity">
-			    <b>Ahojte ľudia!</b><br>
+				<b>Ahojte ľudia!</b><br>
 				<b>Hi People!</b>
 				<br>
-			    <b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
+				<b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
 
-    <h3 class="w3-padding-16 w3-text-light-blue">Naše zručnosti</h3>
-    <p class="w3-wide">Fotografovanie</p>
-    <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide">Web Dizajn</p>
-    <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide">Web Technológie a nástroje</p>
-    <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:85%"></div>
-    </div><br>
+				<h3 class="w3-padding-16 w3-text-light-blue">Naše zručnosti</h3>
+				<p class="w3-wide">Fotografovanie</p>
+				<div class="w3-white">
+					<div class="w3-light-blue" style="height:28px;width:85%"></div>
+				</div>
+				<p class="w3-wide">Web Dizajn</p>
+				<div class="w3-white">
+					<div class="w3-light-blue" style="height:28px;width:95%"></div>
+				</div>
+				<p class="w3-wide">Web Technológie a nástroje</p>
+				<div class="w3-white">
+					<div class="w3-light-blue" style="height:28px;width:85%"></div>
+				</div><br>
 
-    <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">11+</span><br>
-        Partneri
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Projekty
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Veselí klienti
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Stretnutia
-      </div>
-    </div>
+				<div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
+					<div class="w3-quarter w3-section">
+						<span class="w3-xlarge">11+</span><br>
+						Partneri
+					</div>
+					<div class="w3-quarter w3-section">
+						<span class="w3-xlarge">55+</span><br>
+						Projekty
+					</div>
+					<div class="w3-quarter w3-section">
+						<span class="w3-xlarge">89+</span><br>
+						Veselí klienti
+					</div>
+					<div class="w3-quarter w3-section">
+						<span class="w3-xlarge">150+</span><br>
+						Stretnutia
+					</div>
+				</div>
 
-    <button class="w3-button w3-hover-blue w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download
+				<button class="w3-button w3-hover-blue w3-padding-large w3-section">
+					<i class="fa fa-download"></i> Download
 				</button>
 
 				<!-- Grid for pricing tables -->
@@ -160,7 +160,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
 				<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
 				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</p>
-					<!-- End About Section -->
+				<!-- End About Section -->
 
 		</div>
 
@@ -179,9 +179,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				</div>
 
 				<div class="w3-half">
-					<img src="./Image/374gti.jpg" alt=""  style="width:100%">
-					<img src="./Image/x17-detail-050.jpg" alt=""  style="width:100%">
-					<img src="./Image/x17-015.jpg" alt=""  style="width:100%">
+					<img src="./Image/374gti.jpg" alt="" style="width:100%">
+					<img src="./Image/x17-detail-050.jpg" alt="" style="width:100%">
+					<img src="./Image/x17-015.jpg" alt="" style="width:100%">
 					<img src="./Image/x17-int-002.jpg" alt="" style="width:100%">
 				</div>
 				<!-- End photo grid -->
@@ -208,9 +208,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
 				<p>
 					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey" type="submit">
-        <i class="fa fa-paper-plane"></i> Pošli odkaz
+						<i class="fa fa-paper-plane"></i> Pošli odkaz
 
-        </button>
+					</button>
 				</p>
 			</form>
 			<!-- End Contact Section -->
