--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:28% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:28% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:28% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:28% !important">Kontakt</a>
 		</div>
 	</div>
 
@@ -224,7 +224,7 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium">Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a>                       <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a>
+			<p class="w3-medium"><b>Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a><br>                       <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a></b>
 				<!-- End footer -->
 		</footer>
 
